[DSTEW-2083] - Add more tests